Fixed file upload button being visible on FireFox

--- a/src/app/components/profile-settings/profile-settings.component.css
+++ b/src/app/components/profile-settings/profile-settings.component.css
@@ -65,7 +65,8 @@ hr {
   cursor: pointer;
 }
 
-#upload-file > input::-webkit-file-upload-button {
+#upload-file > input::-webkit-file-upload-button,
+#upload-file > input::file-selector-button {
   visibility: hidden;
 }
 
